force-app/main/default/objects/LineAuthConfig__mdt/LineAuthConfig__mdt.object-meta.xml
<CustomObject>
    <label>LINE Auth Config</label>
</CustomObject>