force-app/main/default/objects/LineAuthConfig__mdt/fields/ProfileId__c.field-meta.xml
<CustomField>
    <fullName>ProfileId__c</fullName>
    <label>Profile ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>