force-app/main/default/objects/LineAuthConfig__mdt/fields/RedirectUri__c.field-meta.xml
<CustomField>
    <fullName>RedirectUri__c</fullName>
    <label>Redirect URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>